# Backgammon

./: CMakeLists.txt  ComputerPlayer.cpp  ComputerPlayer.h  Player.h  main.cpp
Backgammon/: AnalysisTools.cpp  AnalysisTools.h  Board.cpp  Board.h  CMakeLists.txt  GameState.cpp  GameState.h  Move.cpp  Move.h  StaticEvaluator.cpp  StaticEvaluator.h  types.h
analysis/: CMakeLists.txt
analysis/bearing_off/: CMakeLists.txt  main.cpp
analysis/enumeration_offsets/: CMakeLists.txt  main.cpp
analysis/position_evaluator/: CMakeLists.txt  main.cpp
bearing_off/: CMakeLists.txt  main.cpp
position_evaluator/: Number of ways to roll x.txt  point value.txt  x pips in y.txt
